--- a/src/main/angular/src/ux/auto-complete.component.scss
+++ b/src/main/angular/src/ux/auto-complete.component.scss
@@ -55,7 +55,7 @@ mf-auto-complete {
       overflow: hidden;
       padding: 0 10px;
       text-overflow: ellipsis;
-      text-align: start;
+      text-align: left;
       white-space: nowrap;
       width: 100%;
 
@@ -70,6 +70,16 @@ mf-auto-complete {
 
       &.selected {
         background-color: #dae1e1;
+      }
+    }
+  }
+}
+
+[dir="rtl"] {
+  mf-auto-complete {
+    > .results {
+      > li {
+        text-align: right;
       }
     }
   }
